# benchmark-runner

./: .bumpversion.cfg  .coderabbit.yaml  .coveragerc  .coveralls.yml  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yaml  CLAUDE.md  Dockerfile  HOW_TO.md  MANIFEST.in  Makefile  OWNERS  PRE-COMMIT.md  README.md  RELEASE.md  conf.py  generate_golden_files.sh  mkdocs.yml  pre_commit.md  pyproject.toml  requirements.txt  requirments.txt  setup.cfg  setup.py  tests_requirements.txt  tests_requirments.txt  utils.py
.claude/: settings.json
.claude/skills/: README.md
.github/: PULL_REQUEST_TEMPLATE.md  auto_assign.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: Build.yml  Build_runner.yml  CI.yml  Func_Env_Build_CI.yml  Func_Env_Build_Test_CI.yml  Func_Env_E2E_Test_CI.yml  Func_Env_PR_Test_CI.yml  Func_Env_Test_CI.yml  Nightly.yml  Nightly_Func_CI.yml  Nightly_Func_Env_CI.yml  Nightly_Func_Env_IPI_CI.yml  Nightly_Func_Env_Operator_CI.yml  Nightly_Perf_CI.yml  Nightly_Perf_Env_CI.yml  Nightly_Perf_Env_CI_Scale.yml  Nightly_Perf_Env_Even_CI.yml  Nightly_Perf_Env_IPI_CI.yml  Nightly_Perf_Env_Odd_CI.yml  Nightly_Perf_Env_Operator_CI.yml  Nightly_Perf_Env_hammerdb_CI.yml  PR_Test_CI.yml  Perf_Env_Build_Azure_Test_CI.yml  Perf_Env_Build_Test_CI.yml  Perf_Env_E2E_Test_CI.yml  Perf_Env_PR_Approval.yml  Perf_Env_PR_Azure_Test_CI.yml  Perf_Env_PR_Test_CI.yml  Release_ClusterBuster_Perf_Env_CI.yml  Test  Test.yml  Test_CI.yml  Weekly_Func_Env_IPI_CI.yml  Weekly_Func_Env_Installer_CI.yml  Weekly_Func_Env_Operator_CI.yml  Weekly_Perf_Env_IPI_CI.yml  Weekly_Perf_Env_Installer_CI.yml  Weekly_Perf_Env_Operator_CI.yml  run_grafonnet.yml
.gitlab/: test_branch.yml
.gitlab/workflows/: test_branch.yml
benchmark_runner/: .bumpversion.cfg
benchmark_runner.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
benchmark_runner/benchmark_operator/: benchmark_operator_exceptions.py  benchmark_operator_workloads.py  benchmark_operator_workloads_operations.py  hammerdb_pod.py  hammerdb_vm.py  stressng_pod.py  stressng_vm.py  uperf_pod.py  uperf_vm.py
benchmark_runner/cluster_buster/: cluster_buster_exceptions.py  cluster_buster_workloads.py
benchmark_runner/clusterbuster/: clusterbuster_exceptions.py  clusterbuster_workloads.py
benchmark_runner/grafana/: Dockerfile  update_grafana_dashboard.py  update_main_libsonnet_versions.py  update_versions_main_libsonnet.py
benchmark_runner/krkn_hub/: krknhub_exceptions.py  krknhub_workloads.py
benchmark_runner/main/: environment_variables.py  environment_variables_exceptions.py  main.py  temporary_environment_variables.py  update_data_template_yaml_with_environment_variables.py
benchmark_runner/workloads/: bootstorm_vm.py  fio_pod.py  fio_vm.py  hammerdb_pod.py  hammerdb_vm.py  linstress_vm.py  stressng_pod.py  stressng_vm.py  sysbench_pod.py  sysbench_vm.py  uperf_pod.py  uperf_vm.py  vdbench_pod.py  vdbench_vm.py  windows_vm.py  winfio_vm.py  winmssql_vm.py  winstress_vm.py  workloads.py  workloads_exceptions.py  workloads_operations.py
ci_pod/: CI_POD_README.md  create_ci_pod.sh  delete_ci_pod.sh  deploy_ci_pod.sh  env_vars_ci_pod.sh  run_ci_pod.sh
ci_pod/ai_agent/: .env  app.py  readme.md  requirements.txt  run_agent.sh  run_es_mcp.sh  run_once.sh
ci_pod/flask/: Dockerfile
ci_pod/jetlag/: run_jetlag.sh
ci_pod/jupyterlab/: Dockerfile  generate_summary_report.sh
ci_pod/nginx/: Dockerfile  ibm_conf.conf  nginx.conf
dockerfiles/centos-stream8-vdbench5.04.07 pod/: Dockerfile  readme.txt  state_signals_responder.py
dockerfiles/centos-stream8-vdbench5.04.07-container-disk/: install_vdbench.sh  state_signals_responder.py
docs/: PRE-COMMIT.md  README.md  README.rst  conf.py  index.md  index.rst
grafana/: Dockerfile  benchmark-runner-ci-status-report.json  benchmark-runner-ci-status.json  benchmark-runner-compare-3-ci-dates-report.json  benchmark-runner-compare-3-ocp-versions-report.json  benchmark-runner-report-compare-3-versions.json  benchmark-runner-report.json  benchmark-runner-summary-line-report-final.json  regression-summary.json  system-metrics-report.json  update_grafana_dashboard.py
hack/: get_latest_python_patch.py
orion-configs/: perfci-bootstorm.yaml  perfci-fio.yaml  perfci-hammerdb.yaml  perfci-sysbench.yaml  perfci-uperf.yaml  perfci-vdbench.yaml  perfci-windows-bootstorm.yaml
prow/: .ci-operator.yaml  Dockerfile
(+937 files in other folders)
